[project]
name = "wdl-testing-cli"
description = "DNAstack WDL testing CLI"
version = "0.1.4"
authors = [
    { name = "DNAstack", email = "devs@dnastack.com" }
]
dependencies = [
    "click",
    "dnastack-client-library",
    "jsonpickle",
    "miniwdl",
    "requests"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wdlci = ["wdl_tests/*.wdl"]

[project.scripts]
wdl-ci = "wdlci.cli.__main__:main"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''
