[project]
name = "wdl-testing-cli"
description = "DNAstack WDL testing CLI"
version = "2.0.4"
authors = [
    { name = "DNAstack", email = "devs@dnastack.com" }
]
dependencies = [
    "click==8.1.7",
    "dnastack-client-library==3.1.59",
    "jsonpickle==4.0.0",
    "miniwdl==1.12.1",
    "requests==2.32.3",
    "psutil==6.1.0",
    "pyjwt[crypto]==2.10.1"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wdlci = ["wdl_tests/*.wdl"]

[project.scripts]
wdl-ci = "wdlci.cli.__main__:main"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''
