[project]
name = "wdl-testing-cli"
description = "DNAstack WDL testing CLI"
version = "2.2.0"
authors = [
    { name = "DNAstack", email = "devs@dnastack.com" }
]
dependencies = [
    "click==8.1.8",
    "dnastack-client-library==3.1.232",
    "jsonpickle==4.1.1",
    "miniwdl==1.14.2",
    "requests==2.34.2",
    "psutil==7.2.2",
    "pyjwt[crypto]==2.13.0"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wdlci = ["wdl_tests/*.wdl"]

[project.scripts]
wdl-ci = "wdlci.cli.__main__:main"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''
